--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -3,14 +3,22 @@
 #^title trim=ends
 #^------------------------------
 
-This is the title
+Theme variables
 
 #^------------------------------
 #^body trim=ends form=markdown
 #^------------------------------
 
-Welcome
--------
+<div class="b15">base15</div>
+<div class="b14">base14</div>
+<div class="b13">base13</div>
+<div class="b12">base12</div>
+<div class="b11">base11</div>
+<div class="b">base</div>
+<div class="b01">base01</div>
+<div class="b02">base02</div>
+<div class="b03">base03</div>
+<div class="b04">base04</div>
+<div class="b05">base05</div>
 
-Here is a web page rendered from markdown.
 
