--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -21,4 +21,16 @@ Theme variables
 <div class="b04">base04</div>
 <div class="b05">base05</div>
 
+<div class="ab15">base15</div>
+<div class="ab14">base14</div>
+<div class="ab13">base13</div>
+<div class="ab12">base12</div>
+<div class="ab11">base11</div>
+<div class="ab">base</div>
+<div class="ab01">base01</div>
+<div class="ab02">base02</div>
+<div class="ab03">base03</div>
+<div class="ab04">base04</div>
+<div class="ab05">base05</div>
+
 
