--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -9,28 +9,29 @@ Theme variables
 #^body trim=ends form=markdown
 #^------------------------------
 
-<div class="b15">base15</div>
-<div class="b14">base14</div>
-<div class="b13">base13</div>
-<div class="b12">base12</div>
-<div class="b11">base11</div>
-<div class="b">base</div>
-<div class="b01">base01</div>
-<div class="b02">base02</div>
-<div class="b03">base03</div>
-<div class="b04">base04</div>
-<div class="b05">base05</div>
-
-<div class="ab15">base15</div>
-<div class="ab14">base14</div>
-<div class="ab13">base13</div>
-<div class="ab12">base12</div>
-<div class="ab11">base11</div>
-<div class="ab">base</div>
-<div class="ab01">base01</div>
-<div class="ab02">base02</div>
-<div class="ab03">base03</div>
-<div class="ab04">base04</div>
-<div class="ab05">base05</div>
-
+<div class="side">
+	<div class="b15">base15</div>
+	<div class="b14">base14</div>
+	<div class="b13">base13</div>
+	<div class="b12">base12</div>
+	<div class="b11">base11</div>
+	<div class="b">base</div>
+	<div class="b01">base01</div>
+	<div class="b02">base02</div>
+	<div class="b03">base03</div>
+	<div class="b04">base04</div>
+	<div class="b05">base05</div>
+</div><div class="side">
+	<div class="ab15">base15</div>
+	<div class="ab14">base14</div>
+	<div class="ab13">base13</div>
+	<div class="ab12">base12</div>
+	<div class="ab11">base11</div>
+	<div class="ab">base</div>
+	<div class="ab01">base01</div>
+	<div class="ab02">base02</div>
+	<div class="ab03">base03</div>
+	<div class="ab04">base04</div>
+	<div class="ab05">base05</div>
+</div>
 
