--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -35,3 +35,5 @@ Theme variables
 	<div class="ab05">base05</div>
 </div>
 
+Example: <a href="http://d-portal.org/ctrack.html?search&rgba=orange_teal&sector_group=311&publisher=44000#view=act&aid=44000-P081567">orange_teal theme applied on SAVi</a>
+
