--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -9,31 +9,33 @@ Theme variables
 #^body trim=ends form=markdown
 #^------------------------------
 
-<div class="side">
-	<div class="b15">base15</div>
-	<div class="b14">base14</div>
-	<div class="b13">base13</div>
-	<div class="b12">base12</div>
-	<div class="b11">base11</div>
-	<div class="b">base</div>
-	<div class="b01">base01</div>
-	<div class="b02">base02</div>
-	<div class="b03">base03</div>
-	<div class="b04">base04</div>
-	<div class="b05">base05</div>
-</div><div class="side">
-	<div class="ab15">base15</div>
-	<div class="ab14">base14</div>
-	<div class="ab13">base13</div>
-	<div class="ab12">base12</div>
-	<div class="ab11">base11</div>
-	<div class="ab">base</div>
-	<div class="ab01">base01</div>
-	<div class="ab02">base02</div>
-	<div class="ab03">base03</div>
-	<div class="ab04">base04</div>
-	<div class="ab05">base05</div>
+<div class="max">
+	<div class="side">
+		<div class="b15">base15</div>
+		<div class="b14">base14</div>
+		<div class="b13">base13</div>
+		<div class="b12">base12</div>
+		<div class="b11">base11</div>
+		<div class="b">base</div>
+		<div class="b01">base01</div>
+		<div class="b02">base02</div>
+		<div class="b03">base03</div>
+		<div class="b04">base04</div>
+		<div class="b05">base05</div>
+	</div><div class="side">
+		<div class="ab15">base15</div>
+		<div class="ab14">base14</div>
+		<div class="ab13">base13</div>
+		<div class="ab12">base12</div>
+		<div class="ab11">base11</div>
+		<div class="ab">base</div>
+		<div class="ab01">base01</div>
+		<div class="ab02">base02</div>
+		<div class="ab03">base03</div>
+		<div class="ab04">base04</div>
+		<div class="ab05">base05</div>
+	</div>
 </div>
 
-Example: <a href="http://d-portal.org/ctrack.html?search&rgba=orange_teal&sector_group=311&publisher=44000#view=act&aid=44000-P081567">orange_teal theme applied on SAVi</a>
+<div class="max white">Example: <a href="http://d-portal.org/ctrack.html?search&rgba=orange_teal&sector_group=311&publisher=44000#view=act&aid=44000-P081567">orange_teal theme applied on SAVi</a></div>
 
